Bug: Added missing background colour hover style

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -51,6 +51,7 @@
                 transition: color 0.3s;
                 &:hover {
                     color: #404047;
+                    background-color: rgb(216, 216, 216);
                 }
             }
         }
